--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,4 +1,4 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
 
-html { background: #262c33 url("/images/banner.jpg");}
+html { background: #262c33 url("/images/bg-white.png");}
